mysql/k8s/deploy/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mysql-secret
              key: mysql-root-password
        image: mysql:8.0
        imagePullPolicy: Always
        name: mysql-app
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/mysql/conf.d
          name: mysql-ssl-config
          readOnly: true
        - mountPath: /etc/mysql/ssl
          name: mysql-ssl
          readOnly: true
        - mountPath: /var/lib/mysql
          name: mysql-volume
          subPath: data
          readOnly: false
      restartPolicy: Always
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      volumes:
      - name: mysql-ssl-config
        projected:
          sources:
          - configMap:
              name: mysql-ssl-config
      - name: mysql-ssl
        projected:
          sources:
          - configMap:
              name: kube-root-ca.crt
          - secret:
              name: mysql-tls
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-pvc
