mysql/k8s/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql-service
  namespace: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
